--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,14 @@ dependencies {
     // Hilt
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
+
+    // Worker
+    def worker_version = "2.8.0"
+    implementation("androidx.work:work-runtime-ktx:$worker_version")
+    implementation("androidx.work:work-runtime-ktx:$worker_version")
+    implementation 'androidx.hilt:hilt-work:1.0.0'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
 }
 kapt {
     correctErrorTypes = true
